<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresurActivity">

    <EditText
        android:id="@+id/textPulse"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxTach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxTach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/labelTahikard"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSavePres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelPresDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="@string/labelPresDown"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textPresDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelPresUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="@string/labelPresUp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TextPresUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textPresDown"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/labelPulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="@string/labelPulse"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textPulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TextPresUp"
        android:layout_width="289dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/labelPresDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelTitlePres"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/textTitlePres"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/labelPresUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnSavePres"
        android:layout_width="290dp"
        android:layout_height="55dp"

        android:layout_marginBottom="160dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnSavePres"
        android:text="@string/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnProfilAusPres"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnPresProfil"
        android:text="@string/btnProfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFitnesAusPres"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSavePres"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/btnFitnesAusPres"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnPresFitnes"
        android:text="@string/btnFitnes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSavePres"
        app:layout_constraintVertical_bias="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>