<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFitnes">

    <Button
        android:id="@+id/btnSaveFitnes"
        android:layout_width="290dp"
        android:layout_height="55dp"

        android:layout_marginBottom="256dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnSaveFitn"
        android:text="@string/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/labelStep"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textStep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelTitleFitnes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTitleFitnes"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/labelWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <EditText
        android:id="@+id/TextWeight"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/labelStep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelWeight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TextWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textStep"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveFitnes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPresAusFitnes"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnFitPres"
        android:text="@string/btnPres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/btnProfilAusFitnes"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveFitnes"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/btnProfilAusFitnes"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:background="@drawable/rounded_button"
        android:onClick="btnFitProfil"
        android:text="@string/btnProfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveFitnes"
        app:layout_constraintVertical_bias="0.501" />


</androidx.constraintlayout.widget.ConstraintLayout>